# jodex_wiggum_coding_agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  prd.json  progress.txt
.agent/: memory.md
ai_docs/ralph_wiggum_loop/: RALPH_WIGGUM_LOOP.md
prd/001_deployment-script/: PRD.md  REQ.md  prd.json
scripts/jodex/: .last-branch  CLAUDE.md  PRD.md  jodex.sh  prd.json  progress.txt
scripts/ralph/: prd.json  progress.txt
skills/CLAUDE/: CLAUDE.md
skills/brd-prd/: Complete_User_Story_Template_with_Gherkin.md  PRD_LITE_SKILL.md  SKILL.md
skills/brd-prd/prd_examples/: PRD.md
skills/jodex-gen-brd-prd/: BRD_Template.md  PRD_Template.md  SKILL.md  Unified_BRD_PRD_Template.md
skills/jodex-gen-brd-prd/ai_docs/: A Strategic Framework for Modern Business Requirements Documentation Templates for Human-AI Collaboration.md  The Definitive Guide to Business and Product Requirements Documents From Strategic 'Why' to Tactical 'What'.md  The Minimalist PRD A Reusable Template for Agile Software Development.md
skills/jodex-gen-prd/: SKILL.md
skills/jodex-gen-prd-lite/: SKILL.md
skills/jodex-gen-prd-task/: SKILL.md
skills/jodex-gen-tds/: SKILL.md
skills/prd/: SKILL.md
skills/tds/: SKILL.md
skills/tds/ai_docs/: A Guide to the Modern Technical Design Document A Minimalist Machine-Readable Template.md  Universal Coding Principles.md
skills/tds/example_tech_spec_md/: TECH_SPEC.md
src/: main.rs
tasks/: prd-jodex-loop-rs.md  prd-ralph-loop-rs.md
tests/: cli.rs
